--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -13,7 +13,7 @@ fr:
       not_found_in_database: "Nom d'utilisateur ou mot de passe invalide."
       timeout: "Votre session a expiré. Veuillez vous reconnecter pour continuer."
       unauthenticated: "Vous devez vous connecter ou vous inscrire avant de continuer."
-      unconfirmed: "Vous devez confirmer votre adresse email avant de continuer."
+      unconfirmed: "Vous devez confirmer votre adresse email avant de continuer. %{resend_link}"
     mailer:
       confirmation_instructions:
         subject: "Instructions de confirmation"
