--- a/config/locales/devise.fr.yml
+++ b/config/locales/devise.fr.yml
@@ -53,7 +53,7 @@ fr:
       unlocked: "Votre compte a été déverrouillé avec succès. Veuillez vous connecter pour continuer."
   errors:
     messages:
-      already_confirmed: "a déjà été confirmé(e), veuillez essayer de vous connecter"
+      already_confirmed: "a déjà été confirmé, veuillez essayer de vous connecter"
       confirmation_period_expired: "doit être confirmé(e) dans les %{period}, veuillez en demander un nouveau"
       expired: "a expiré, veuillez en demander un nouveau"
       not_found: "introuvable"
