--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -308,22 +308,29 @@ fr:
     registration:
       title: "S’inscrire"
       main_info: "Informations principales"
-      email_placeholder: "Email*"
-      password_placeholder: "Mot de passe*"
-      password_confirmation_placeholder: "Confirmer le mot de passe*"
+      email_placeholder: "Entrez votre email"
+      password_placeholder: "Entrez votre mot de passe"
+      password_confirmation_placeholder: "Entrez de nouveau votre mot de passe"
       additional_info: "Informations supplémentaires"
-      firstname_placeholder: "Prénom*"
-      lastname_placeholder: "Nom de famille"
-      pseudo_placeholder: "Pseudo*"
-      status_prompt: "Choisissez un statut*"
+      firstname_placeholder: "Entrez votre prénom"
+      lastname_placeholder: "Entrez votre nom de famille"
+      pseudo_placeholder: "Entrez votre nom d'utilisateur"
+      status_prompt: "Choisissez un statut"
       status_options:
-        student: "Étudiant"
-        teacher: "Enseignant"
-        company: "Entreprise"
-        association: "Association"
-        designer: "Designer"
-        artist: "Artiste"
-        other: "Autre"
+        etudiant: "Étudiant"
+        enseignant: "Enseignant"
+        entreprise: "Entreprise"
+        artiste: "Artiste"
+        autre: "Autre"
+      label_email: "Adresse e-mail*"
+      label_password: "Mot de passe*"
+      label_password_confirmation: "Confirmer le mot de passe*"
+      label_firstname: "Prénom*"
+      label_lastname: "Nom"
+      label_pseudo: "Nom d'utilisateur*"
+      label_statut: "Votre statut"
+      label_etablissement: "Votre établissement (école)"
+      label_how_did_you_hear: "Source de découverte du site"
       establishment_blank: "Aucun établissement"
       establishment_search: "Rechercher un établissement..."
       rgpd_label: "J'accepte que mes données personnelles soient collectées et traitées conformément à la %{privacy_policy}"
