ADMIN/SCSS/MOBILE APP

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -17,7 +17,7 @@ fr:
     search: "Rechercher"
     lists: "Listes"
     profile: "Profil"
-    add: "Ajouter"
+    add: "Contribuer"
     login: "Se connecter"
     logout: "Se déconnecter"
     legal: "Mentions légales"
@@ -33,7 +33,7 @@ fr:
     search: "Rechercher"
     list: "Listes"
     profile: "Profil"
-    add: "Ajouter"
+    add: "Contribuer"
     login: "Connexion"
     sitemap: "Plan du site"
     social: "Réseaux"
